<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".presenter.ui.login.LoginFragment">


    <ImageButton
        android:id="@+id/login_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:background="@color/transparent"
        android:contentDescription="@string/login_back_button"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:src="@drawable/back_bt"
        app:layout_constraintBottom_toBottomOf="@+id/login_title_tv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/login_title_tv"
        app:tint="@color/light_black" />

    <TextView
        android:id="@+id/login_title_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@color/transparent"
        android:fontFamily="casual"
        android:text="@string/login_title"
        android:textAlignment="center"
        android:textColor="@color/light_black"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/login_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="casual"
        android:text="@string/login_welcome"
        android:textAlignment="center"
        android:textColor="@color/blue1"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_back" />

    <EditText
        android:id="@+id/login_mail_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:autofillHints="emailAddress"
        android:background="@drawable/et_stroke"
        android:drawableStart="@drawable/ic_mail"
        android:ems="10"
        android:hint="@string/login_mail"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_text" />

    <EditText
        android:id="@+id/login_pass_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="32dp"
        android:autofillHints="password"
        android:background="@drawable/et_stroke"
        android:drawableStart="@drawable/ic_lock"
        android:ems="10"
        android:hint="@string/login_password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_mail_et" />

    <TextView
        android:id="@+id/login_forgot_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/login_forgot_pass"
        android:textColor="@color/blue1"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@+id/login_pass_et"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="@+id/login_pass_et"
        app:layout_constraintTop_toBottomOf="@+id/login_pass_et" />

    <Button
        android:id="@+id/home_login_bt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/button_round_with_stroke"
        android:elevation="5dp"
        android:fontFamily="casual"
        android:minHeight="50dp"
        android:text="@string/login_bt"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="@+id/login_pass_et"
        app:layout_constraintStart_toStartOf="@+id/login_pass_et"
        app:layout_constraintTop_toBottomOf="@+id/login_forgot_link" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/login_alternative"
        app:layout_constraintEnd_toEndOf="@+id/home_login_bt"
        app:layout_constraintStart_toStartOf="@+id/home_login_bt"
        app:layout_constraintTop_toBottomOf="@+id/home_login_bt" />

    <ImageButton
        android:id="@+id/login_google"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/googleg_standard_color_18"
        app:layout_constraintEnd_toStartOf="@+id/login_facebook"
        app:layout_constraintStart_toStartOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        android:contentDescription="@string/login_google" />

    <ImageView
        android:id="@+id/login_facebook"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:scaleX="0.75"
        android:scaleY="0.75"
        android:src="@drawable/facebook"
        app:layout_constraintBottom_toBottomOf="@+id/login_google"
        app:layout_constraintEnd_toEndOf="@+id/textView7"
        app:layout_constraintStart_toEndOf="@+id/login_google"
        app:layout_constraintTop_toTopOf="@+id/login_google"
        android:contentDescription="@string/login_facebook" />

    <TextView
        android:id="@+id/login_create_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/login_create_account"
        android:textAlignment="center"
        android:textColor="@color/blue1"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/home_login_bt"
        app:layout_constraintStart_toStartOf="@+id/home_login_bt" />


</androidx.constraintlayout.widget.ConstraintLayout>